--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "rxjs": "^7.5.7"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.6.0",
     "@nestjs/cli": "^9.1.4",
     "@nestjs/schematics": "^9.0.3",
     "@nestjs/testing": "^9.1.4",
@@ -57,6 +58,7 @@
     "typescript": "^4.8.4"
   },
   "jest": {
+    "verbose": true,
     "moduleFileExtensions": [
       "js",
       "json",
