--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "graphql-request": "^5.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.5.7"
+    "rxjs": "^7.5.7",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
@@ -45,6 +46,7 @@
     "@types/jest": "^29.1.1",
     "@types/node": "^18.8.2",
     "@types/supertest": "^2.0.12",
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.40.0",
     "@typescript-eslint/parser": "^5.39.0",
     "eslint": "^8.25.0",
