--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "eslint": "^8.25.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "faker": "^5.5.3",
     "jest": "^29.1.2",
     "prettier": "^2.7.1",
     "source-map-support": "^0.5.21",
