--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "@nestjs/core": "^9.1.4",
     "@nestjs/platform-express": "^9.1.4",
     "@nestjs/swagger": "^6.1.2",
+    "axios": "^1.2.0",
     "cache-manager": "^5.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "dotenv": "^16.0.3",
     "graphql": "^16.6.0",
     "graphql-request": "^5.0.0",
     "reflect-metadata": "^0.1.13",
