--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@types/cache-manager": "^4.0.2",
     "@types/express": "^4.17.14",
     "@types/jest": "^29.1.1",
+    "@types/multer": "^1.4.7",
     "@types/node": "^18.8.2",
     "@types/supertest": "^2.0.12",
     "@types/uuid": "^8.3.4",
