--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/core": "^9.1.4",
     "@nestjs/platform-express": "^9.1.4",
     "@nestjs/swagger": "^6.1.2",
+    "aws-sdk": "^2.1286.0",
     "axios": "^1.2.0",
     "cache-manager": "^5.0.0",
     "class-transformer": "^0.5.1",
