--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.5.7",
+    "stripe": "^11.6.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
