--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -60,6 +60,7 @@ jobs:
           (echo "DEFAULT_WAREHOUSE_ID=${{ secrets.DEFAULT_WAREHOUSE_ID }}") >> .env
           (echo "AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}") >> .env
           (echo "AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}") >> .env
+          (echo "STAFF_TOKEN=${{ secrets.STAFF_TOKEN }}") >> .env
 
         # Docker login
       - name: Login to DockerHub
