Implementation: Open telementry complete code.

--- a/package.json
+++ b/package.json
@@ -26,6 +26,11 @@
     "@nestjs/core": "^9.1.4",
     "@nestjs/platform-express": "^9.1.4",
     "@nestjs/swagger": "^6.1.2",
+    "@opentelemetry/auto-instrumentations-node": "^0.36.0",
+    "@opentelemetry/exporter-trace-otlp-http": "^0.35.0",
+    "@opentelemetry/resources": "^1.9.0",
+    "@opentelemetry/sdk-node": "^0.35.0",
+    "@opentelemetry/semantic-conventions": "^1.9.0",
     "aws-sdk": "^2.1286.0",
     "axios": "^1.2.0",
     "cache-manager": "^5.0.0",
