fix: checkout token

--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -73,7 +73,7 @@ jobs:
           (echo "MAPPING_SERVICE_URL=${{ secrets.MAPPING_SERVICE_URL }}") >> .env
           (echo "PROVISION_STOREFRONT_URL=${{ secrets.PROVISION_STOREFRONT_URL }}") >> .env
           (echo "AUTH_TOKEN_GITHUB=${{ secrets.AUTH_TOKEN_GITHUB }}") >> .env
-          (echo "AUTH_TOKEN_GITHUB=${{ secrets.B2B_CHECKOUT_APP_TOKEN }}") >> .env
+          (echo "B2B_CHECKOUT_APP_TOKEN=${{ secrets.B2B_CHECKOUT_APP_TOKEN }}") >> .env
 
           
         # Docker login
