--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "form-data": "^4.0.0",
     "graphql": "^16.6.0",
     "graphql-request": "^5.0.0",
+    "jwt-decode": "^3.1.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.5.7",
