--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@opentelemetry/resources": "^1.9.0",
     "@opentelemetry/sdk-node": "^0.35.0",
     "@opentelemetry/semantic-conventions": "^1.9.0",
+    "auth0": "^3.3.0",
     "aws-sdk": "^2.1286.0",
     "axios": "^1.2.0",
     "cache-manager": "^5.0.0",
@@ -52,6 +53,7 @@
     "@nestjs/cli": "^9.1.4",
     "@nestjs/schematics": "^9.0.3",
     "@nestjs/testing": "^9.1.4",
+    "@types/auth0": "^3.3.1",
     "@types/cache-manager": "^4.0.2",
     "@types/express": "^4.17.14",
     "@types/jest": "^29.1.1",
