Update: shipping method discount, added an api which fetches product mappings

--- a/.env.dist
+++ b/.env.dist
@@ -29,6 +29,7 @@ B2B_CHECKOUT_APP_TOKEN ='Bearer token'
 MAPPING_SERVICE_TOKEN =jsnv4r1vdeje9viuevkds3mq
 MAPPING_SERVICE_URL =https://shr.ent.us-east-2.aws.elastic-cloud.com/api/as/v1/engines/b2c-product-track-dev
 ELASTIC_SEARCH_ENDPOINT ='https://shr.ent.us-east-2.aws.elastic-cloud.com'
+ELASTIC_SEARCH_B2B_PRODUCT_ENGINE = "api/as/v1/engines/b2b-product-track-dev"
 
 PROVISION_STOREFRONT_URL =https://api.github.com/repos/aiworksla/provision_storefront/dispatches
 AUTH_TOKEN_GITHUB =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
