--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "aws-sdk": "^2.1286.0",
     "axios": "^1.2.0",
     "cache-manager": "^5.0.0",
+    "cache-manager-redis-store": "^3.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "dotenv": "^16.0.3",
@@ -56,6 +57,7 @@
     "@nestjs/testing": "^9.1.4",
     "@types/auth0": "^3.3.1",
     "@types/cache-manager": "^4.0.2",
+    "@types/cache-manager-redis-store": "^2.0.1",
     "@types/express": "^4.17.14",
     "@types/jest": "^29.1.1",
     "@types/multer": "^1.4.7",
